# NoteFlow

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.complete  README.md  RELEASING.md  docker-compose.gpu.yml  docker-compose.prebuilt.yml  docker-compose.yml  run.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: commitlint.yml  docker-build.yml  main.yml  release-extension.yml
BillNote_extension/: README.md  package.json  pnpm-lock.yaml
BillNote_extension/src/: manifest.ts
BillNote_frontend/: .env.tauri  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
BillNote_frontend/src/: index.css  main.tsx
BillNote_frontend/src-tauri/: Cargo.toml  tauri.conf.json
BillNote_frontend/src-tauri/capabilities/: default.json
NoteFlow_docs/: package.json
NoteFlow_extension/: README.md  package.json
NoteFlow_frontend/: Dockerfile  Dockerfile.prebuilt  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  商业模式.relationship.md
NoteFlow_frontend/deploy/: start.sh
NoteFlow_frontend/src/: App.tsx  index.css
NoteFlow_frontend/src-tauri/: Cargo.toml  tauri.conf.json
backend/: .env.example  Dockerfile  Dockerfile.gpu  build.bat  build.sh  ffmpeg_helper.py  init.sql  main.py  requirements.txt
backend/app/: __init__.py
backend/sql/: billing_init.sql  (+5 more)
docs/: DEPLOYMENT.md  cookie-pool-and-notifications-design.md  pipeline-analysis.md
nginx/: default.conf
(+331 files in other folders)
